Add second HTML file sans CSS

--- a/html1/first_file.html
+++ b/html1/first_file.html
@@ -17,6 +17,7 @@
       <p>THIS IS ANOTHER PARAGRAPH. THIS IS ANOTHER PARAGRAPH. THIS IS ANOTHER PARAGRAPH. </p>
 
     </div>
+    <div>
 
       THIS IS A LINE BREAK <br>
       THIS IS A LINE BREAK <br>
@@ -42,7 +43,12 @@
         <li> Item 5 </li>
       </ul>
       <p style="margin-left: 1.2cm">
-      <strong>THIS TEXT IS BOLD</strong><br>
-      <br>
-      <em>THIS TEXT IS ITALIC</em>
+        <strong>THIS TEXT IS BOLD</strong><br>
+        <br>
+        <em>THIS TEXT IS ITALIC</em>
+      </p>
+    </div>
+  </body>
+</html>
+
 
