add working Add button and tweaks

--- a/JS1/test.html
+++ b/JS1/test.html
@@ -11,14 +11,16 @@
 	<div class="main" >
 		<div class="heading">
 			Your Todos
-		</div>
+		</div >
+		<div id="entry_box">
 		<div class = "entry"> Hit the gym1</div>
 		<div class = "entry"> Hit the gym2</div>
 		<div class = "entry"> adasd</div>
 		<div class = "entry"> asdasdasdasde gym2</div>
 		<div class = "entry"> Hit thdade gym2</div>
 		<div class = "entry"> Hit aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa gym2</div>
-
+		</div >
+        <div id="input_row"><input id = 'input'><span id="add_button">Add</span></div>
         
 
 	</div>
