--- a/JS1/test.html
+++ b/JS1/test.html
@@ -13,12 +13,10 @@
 			Your Todos
 		</div >
 		<div id="entry_box">
-		<div class = "entry"> Hit the gym1</div>
-		<div class = "entry"> Hit the gym2</div>
-		<div class = "entry"> adasd</div>
-		<div class = "entry"> asdasdasdasde gym2</div>
-		<div class = "entry"> Hit thdade gym2</div>
-		<div class = "entry"> Hit aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa gym2</div>
+                <div class = "entry">Read More</div>
+		<div class = "entry ticked"> Submit DevClub Assignment</div>
+		<div class = "entry"> Buy Groceries</div>
+		<div class = "entry"> Get Milk</div>
 		</div >
         <div id="input_row"><input id = 'input'><span id="add_button">Add</span></div>
         
